sane-backends (1.0.25-3) UNRELEASED; urgency=low

  * New debian/patches/0130-usb-timeout.patch:
    - Add a timeout to prevent "Resource temporarily unavailable" error
      (Closes: #810919).
      Thanks to Steve Graham <bugs@annaghvarn.plus.com>.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 16 Jan 2016 21:30:19 +0100

sane-backends (1.0.25-2) unstable; urgency=medium

  * Undelete, refresh and rename debian/patches/
    0125-multiarch_dll_search_path.patch (Closes: #804240).
  * debian/rules:
    - Remove "UPSTREAM_VERSION" and use "VERSION" instead.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 07 Nov 2015 08:50:49 +0100

sane-backends (1.0.25-1) unstable; urgency=medium

  * New upstream release (Closes: #740256).
  * Refresh patches:
    - debian/patches/0005-mk_reproducible_results.patch
    - debian/patches/001-scanimage_manpage.patch
    - debian/patches/ppc64el.patch
    - debian/patches/unneeded_doc.patch
    - debian/patches/libsane_deps.patch
    - debian/patches/frontend_libs.patch
    - debian/patches/multiarch_manpages_libdir.patch
    - debian/patches/dll_backend_conf.patch
    - debian/patches/sane-desc.c_debian_mods.patch
  * Remove patches applied upstream:
    - debian/patches/0105-artec_missing_home_environment.patch
    - debian/patches/multiarch_dll_search_path.patch
    - debian/patches/fix-FTBFS-format-not-a-string-literal-error.patch
    - debian/patches/kodakaio.patch
    - debian/patches/saned.man.patch
    - debian/patches/man-page-spelling.patch
    - debian/patches/source-spelling.patch
    - debian/patches/hp5370c.patch
    - debian/patches/out_of_bounds.patch
    - debian/patches/0500-systemd_configure.patch
    - debian/patches/0100-usb3-corrections.patch
  * Remove obsolete lintian-overrides.
  * Rename and reorder patches.
  * New debian/patches/0100-source_spelling.patch:
    - Correct typo in backend/hp-scl.c
  * debian/libsane-common.postrm:
    - Move #DEBHELPER# token to the end of the script.